fix bug #38003(in classes inherited from mysqli it's possible to call private constructors from invalid context) also, use appropriate macro instead of accessing structure elements directly